fix(tasks): More packages movement
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,20 +13,17 @@
       repo: "deb https://raspbian.snips.ai/{{ ansible_distribution_release | replace('buster', 'stretch') }} stable main"
       state: present
 
-- name: Install snips-platform-voice package
-  apt:
-    name: snips-platform-voice
-    state: present
-    update_cache: true
-
 # TODO: Remove libatlas3 when https://github.com/snipsco/snips-issues/issues/161 is fixed
 - name: Install required packages
   apt:
     name:
+      - snips-platform-voice
       - snips-template
-      - snips-template snips-skill-server
+      - snips-template
+      - snips-skill-server
       - 'libatlas3-base=3.10.3-8+rpi1'
     state: present
+    update_cache: true
 
 - include_tasks: update-assistant.yml
   tags:
