fix(tasks): Fix assistant-include, no_log to not log password
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/tasks/install-personal-wakeword.yml
+++ b/tasks/install-personal-wakeword.yml
@@ -11,6 +11,6 @@
 - name: Clone personal hotword repository
   git:
     repo: 'https://github.com/snipsco/snips-record-personal-hotword.git'
-    dest: /home/pi/
+    dest: /home/pi/snips-record-personal-hotword
     depth: 1
     version: master
