fix(tasks): Insert after for config
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,7 @@
   lineinfile:
     path: /etc/snips.toml
     regexp: "{{ item.regexp }}"
+    insertafter: "^# {{ item.regexp }}"
     line: "{{ item.line }}"
   loop:
     - regexp: "mqtt = "
